Fixed bug with wrapping cards

--- a/src/styles/catalog.scss
+++ b/src/styles/catalog.scss
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  max-width: 1200px;
+  margin: auto;
   
   &__item {
     margin: 0 24px 50px;
